[docs]: update swagger api docs to include new routes
